--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-<h2>BlogApp</h2>
+## BlogApp
+
 <br/>
 
-<p>Usage:</p>
-<ul>
-    <li>Next.js</li>
-    <li>TypeScript</li>
-    <li>MySQL</li>
-    <li>AWS</li>
-</ul>
+**Usage:**
+
+- Next.js
+- TypeScript
+- MySQL
+- AWS
